CURRIKI-3347 Resource View/Edit: Tabs Wrap Fix
svn@16280

--- a/web/src/main/webapp/skins/curriki8/views.css
+++ b/web/src/main/webapp/skins/curriki8/views.css
@@ -197,6 +197,7 @@ ul#asset-links {
 ul#asset-links li {
 	border-right: 1px solid #333;
 	display: inline;
+	float: left;
 	margin: 0;
 	padding: 0 5px 0 5px;
 }
